--- a/U1_Android/ComptadorComposable/app/src/main/AndroidManifest.xml
+++ b/U1_Android/ComptadorComposable/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -10,14 +10,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Comptador"
-        tools:targetApi="31">
+        android:theme="@style/Theme.ComptadorComposable"
+        tools:targetApi="31" >
         <activity
             android:name=".MostraComptadorActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="@string/title_activity_mostra_comptador"
+            android:theme="@style/Theme.ComptadorComposable" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.ComptadorComposable" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
